k8s/fastfood-order-management-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastfood-order-management-deployment
  labels:
    app: fastfood-order-management
spec:
  replicas: 1
  template:
    metadata:
      name: fastfood-order-management
      labels:
        app: fastfood-order-management
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
        - name: fastfood-order-management-container
          image: soatpostech/fastfood-order-management:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
  selector:
    matchLabels:
      app: fastfood-order-management
