k8s/fastfood-order-management-sql-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: fastfood-order-management-mysql-statefulset
  labels:
    app: fastfood-order-mananagement-mysql
spec:
  replicas: 1
  template:
    metadata:
      name: fastfood-order-management-mysql
      labels:
        app: fastfood-order-management-mysql
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
        - name: fastfood-order-management-mysql-container
          image: mysql:latest
          ports:
            - containerPort: 3306
  selector:
    matchLabels:
      app: fastfood-order-management-mysql
  serviceName: fastfood-order-management-mysql-service
