k8s/fastfood-order-rabbit-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: fastfood-order-rabbit-statefulset
  labels:
    app: fastfood-order-rabbit
spec:
  replicas: 1
  template:
    metadata:
      name: fastfood-order-rabbit
      labels:
        app: fastfood-order-rabbit
    spec:
      containers:
        - name: fastfood-order-rabbit-container
          image: rabbitmq:latest
          ports:
            - containerPort: 5672
  selector:
    matchLabels:
      app: fastfood-order-rabbit
  serviceName: fastfood-order-rabbit-service
