k8s/fastfood-order-management-sql-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: fastfood-order-management-mysql-service
spec:
  type: ClusterIP
  selector:
    app: fastfood-order-management-mysql
  ports:
    - port: 3306
