k8s/fastfood-order-rabbit-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: fastfood-order-rabbit-service
spec:
  type: ClusterIP
  selector:
    app: fastfood-order-rabbit
  ports:
    - port: 5672
