k8s/fastfood-order-management-deployment-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fastfood-order-management-virtual-service
spec:
  hosts:
    - fastfood-order-management-service
  http:
    - route:
        - destination:
            host: fastfood-order-management-service
            port:
              number: 8080
