k8s/fastfood-order-management-sql-statefulset-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fastfood-order-management-sql-virtual-service
spec:
  hosts:
    - fastfood-order-management-mysql-service
  http:
    - route:
        - destination:
            host: fastfood-order-management-mysql-service
            port:
              number: 3306
